--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
-    "express": "^4.0.0"
+    "express": "^4.0.0",
+    "express-hbs": "^0.7.9"
   },
   "engines": {
     "node": "0.10.x",
